--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,7 @@
-PORT=5000
-MONGO_URI=mongodb+srv://jaymahato10125:Hitman10125@cluster0.ecdt0x7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5001
+# Example Atlas URI (replace placeholders):
+# mongodb+srv://<username>:<password>@<cluster-host>/<db-name>?retryWrites=true&w=majority&appName=<appName>
+MONGO_URI=mongodb+srv://<username>:<password>@<cluster-host>/<db-name>?retryWrites=true&w=majority&appName=<appName>
+JWT_SECRET=replace_me_with_a_strong_secret
 # Support multiple origins by comma-separating
 CORS_ORIGIN=http://localhost:5173,http://localhost:5174
