--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,20 +1,22 @@
 spec:
   name: expense-tracker
-  services:
+  static_sites:
     - name: client
       source_dir: client
       github:
         branch: main
         deploy_on_push: true
       build_command: npm ci && npm run build
-      run_command: npx serve -s dist -l 8080
-      http_port: 8080
+      output_dir: dist
+      index_document: index.html
+      error_document: index.html
       routes:
         - path: /
       envs:
         - key: VITE_API_URL
           value: "/api"
           scope: RUN_AND_BUILD_TIME
+  services:
     - name: server
       source_dir: server
       github:
